--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org</groupId>
-  <artifactId>cas.arbeit</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org</groupId>
+	<artifactId>ebike.city</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+		<geotools.version>24.2</geotools.version>
+
 	</properties>
 
 
@@ -16,12 +20,16 @@
 			<name>MATSim Maven repository</name>
 			<url>https://repo.matsim.org/repository/matsim/</url>
 		</repository>
-		
+
 		<repository>
-    		<id>eqasim</id>
-    		<url>https://packagecloud.io/eth-ivt/eqasim/maven2</url>
+			<id>eqasim</id>
+			<url>https://packagecloud.io/eth-ivt/eqasim/maven2</url>
 		</repository>
-		
+		<repository>
+			<id>osgeo</id>
+			<url>https://repo.osgeo.org/repository/release</url>
+		</repository>
+
 	</repositories>
 
 	<dependencies>
@@ -30,61 +38,71 @@
 			<artifactId>matsim</artifactId>
 			<version>13.0</version>
 		</dependency>
-		
-	<dependency>
-	    <groupId>org.eqasim</groupId>
-	    <artifactId>core</artifactId>
-	    <version>1.3.1</version>
-	</dependency>
-	
 
-	<dependency>
-	    <groupId>org.eqasim</groupId>
-	    <artifactId>switzerland</artifactId>
-	    <version>1.3.1</version>
-	</dependency>
+		<dependency>
+			<groupId>org.eqasim</groupId>
+			<artifactId>core</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
-	<dependency>
-		<groupId>org.matsim.contrib</groupId>
-		<artifactId>drt</artifactId>
-		<version>13.0</version>
-	</dependency>
-		
+		<dependency>
+			<groupId>org.eqasim</groupId>
+			<artifactId>switzerland</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.matsim</groupId>
+			<artifactId>pt2matsim</artifactId>
+			<version>22.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-referencing</artifactId>
+			<version>${geotools.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-epsg-hsql</artifactId>
+			<version>${geotools.version}</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<profiles>
-        <profile>
-            <id>standalone</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                            <!-- Additional configuration. -->
-                        </configuration>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-shade-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>shade</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+		<profile>
+			<id>standalone</id>
+			<build>
+				<plugins>
+					<plugin>
+						<configuration>
+
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+							<!-- Additional configuration. -->
+						</configuration>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>3.2.0</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
