--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,23 @@
 
 	<dependencies>
 		<dependency>
+        	<groupId>org.geotools</groupId>
+        	<artifactId>gt-epsg-hsql</artifactId>
+        	<version>${geotools.version}</version>
+       	</dependency>
+	
+		<dependency>
+        	<groupId>org.geotools</groupId>
+        	<artifactId>gt-epsg-wkt</artifactId>
+        	<version>${geotools.version}</version>
+    	</dependency>
+	
+		<dependency>
 			<groupId>org.matsim</groupId>
 			<artifactId>matsim</artifactId>
 			<version>13.0</version>
 		</dependency>
-
+	
 		<dependency>
 			<groupId>org.eqasim</groupId>
 			<artifactId>core</artifactId>
@@ -57,15 +69,16 @@
 			<version>22.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-referencing</artifactId>
-			<version>${geotools.version}</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.7</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-epsg-hsql</artifactId>
-			<version>${geotools.version}</version>
-		</dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.13.0</version>
+		</dependency>	
 
 	</dependencies>
 
