--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
 			<artifactId>gt-epsg-hsql</artifactId>
 			<version>${geotools.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.ejml</groupId>
+			<artifactId>ejml-all</artifactId>
+			<version>0.43.1</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
